--- a/templates/template.html
+++ b/templates/template.html
@@ -1,4 +1,4 @@
-<!--{% load static %}-->
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,7 +19,7 @@
 
     <script src="{% static 'js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     <title>Wildfires - {% block home %}{% endblock %} </title>
-    {% block style %}{% endblock %}
+    {% block css %}{% endblock %}
 </head>
 <body>
 <div class="fixed-side-navbar">
