feat: added divs for users to see results

--- a/templates/location.html
+++ b/templates/location.html
@@ -14,6 +14,10 @@
             <input id="autocomplete" class="form-control" type="text" />
         </div>
         <button class="btn btn-primary" onclick="getInputValue()">Get input Value</button>
+
+        <h2 class= "cointainer mt-5"> OR </h2>
+        <br>
+
         <div class="form-group">
             <label for="Latitude">Latitude:</label>
             <input id="Latitude" class="form-control" type="text" />
@@ -21,6 +25,7 @@
             <input id="Longitude" class="form-control" type="text" />
         </div>
         <button class="btn btn-primary" onclick="getCoordinates()">Get input Value</button>
+        <h2 class= "cointainer mt-5"> Result </h2>
     </div>
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCv65Fd_RQnwhQuzKAS30JF6DXASmJOuag&libraries=places"></script>
