feat: quick fix

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
                             <li>-  Integrated map feature Coming Soon!</li>
                         </ul>
                         <div class="primary-button">
-                            <a href="#portfolio">Go to predictor</a>
+                            <a href="{% url 'location' %}">Go to predictor</a>
                         </div>
                     </div>
                 </div>
