--- a/static/css/templatemo-main.css
+++ b/static/css/templatemo-main.css
@@ -156,6 +156,16 @@ a:hover { color: #FF0; }
   border-radius: 50px;
 }
 
+.or {
+  margin-bottom: 30px;
+  font-size: 128px;
+  color: #ff7d27;
+  font-weight: 600;
+  font-style: normal;
+  text-transform: uppercase;
+  text-align: center;
+}
+
 .baner-content h1 {
   margin-top: 0px;
   font-size: 128px;
@@ -438,7 +448,7 @@ section {
   margin-bottom: 30px;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  padding: 30px 20px;
+  padding: 30px 15px;
 }
 
 
