feat: fixed animations

--- a/static/css/templatemo-main.css
+++ b/static/css/templatemo-main.css
@@ -21,9 +21,9 @@ body {
   font-size: 14px;
 }
 
-a { color: #3CC; }
+a { color: #ff8e43; }
 
-a:hover { color: #FF0; }
+a:hover { color: #ff7d27; }
 
 /*----------
   NAV
@@ -44,7 +44,7 @@ a:hover { color: #FF0; }
   background: transparent;
 }
 .fixed-side-navbar:hover .nav > li > a > span {
-  color: rgba(0, 0, 0, 0.5);
+  color: rgba(0, 0, 0, .5);
   display: block;
   background-color: #fff;
   text-align: center;
@@ -78,7 +78,7 @@ a:hover { color: #FF0; }
   display: block;
 }
 .fixed-side-navbar .nav > li a {
-  color: #fff;
+  color: #ff7d27;
   min-height: 32px;
   background: transparent;
   padding: 5px 45px 5px 25px;
@@ -144,7 +144,7 @@ a:hover { color: #FF0; }
 
 
 .baner-content {
-  padding-top: 30vh;
+  padding-top: 25vh;
   text-align: center;
   /*background-image: url(../img/1st-section.jpg);*/
   background-image: url("https://media.wired.com/photos/59779389af0762717234af66/master/w_1920,c_limit/Wildfire-TopArt-528693356.jpg");
@@ -197,7 +197,7 @@ a:hover { color: #FF0; }
 .service-content {
   padding-left: 15px;
   padding-right: 15px;
-  padding-top: 25vh;
+  padding-top: 15vh;
   background-image: url(../img/2nd-section.jpg);
   background-attachment: fixed;
   min-height: 100vh;
@@ -207,6 +207,25 @@ a:hover { color: #FF0; }
 
 .service-content .left-text {
   vertical-align: middle;
+}
+
+.thingmabob{
+  font-weight: 500;
+  color: #fff;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-bottom: 15px;
+  vertical-align: middle;
+  width: 100%;
+  text-align: center;
+  text-emphasis: whitesmoke;
+}
+
+.line-dec {
+  height: 3px;
+  background-color: #ff7d27;
+  margin: 40% 0 40% 0;
+  padding: 0;
 }
 
 .service-content .left-text h4 {
@@ -225,7 +244,12 @@ h4, .h4 {
   background-color: #ff7d27;
   margin: 20px 0 20px 0;
 }
-
+.service-content .line-dec {
+  width: 45px;
+  height: 3px;
+  background-color: #ff7d27;
+  margin: 20px 0 20px 0;
+}
 .service-content .left-text p {
   color: #fff;
 }
@@ -389,7 +413,7 @@ section {
 .contact-content {
   padding-left: 15px;
   padding-right: 15px;
-  padding-top: 16vh;
+  padding-top: 14vh;
   background-image: url(../img/5th-section.jpg);
 }
 
