--- a/static/css/templatemo-main.css
+++ b/static/css/templatemo-main.css
@@ -44,7 +44,7 @@ a:hover { color: #ff7d27; }
   background: transparent;
 }
 .fixed-side-navbar:hover .nav > li > a > span {
-  color: rgba(0, 0, 0, .5);
+  color: rgba(0, 0, 0, .8);
   display: block;
   background-color: #fff;
   text-align: center;
@@ -70,7 +70,7 @@ a:hover { color: #ff7d27; }
   width: 16px;
   height: 16px;
   background: transparent;
-  border: 2px solid #fff;
+  border: 2px solid #da5700;
   border-radius: 10px;
 }
 .nav>li {
@@ -98,7 +98,7 @@ a:hover { color: #ff7d27; }
   width: 10px;
   height: 10px;
   border-radius: 10px;
-  background: rgba(250, 250, 250, 0.75);
+  background: rgba(250, 250, 250, 0.85);
   -webkit-transition: all .3s;
   transition: all .3s;
   -webkit-transform: scale(0.6);
@@ -112,7 +112,7 @@ a:hover { color: #ff7d27; }
   boder-right: 0;
 }
 .fixed-side-navbar .nav > li a:hover > span {
-  color: black;
+  color: #da5700;
   display: block;
 }
 
