--- a/templates/template.html
+++ b/templates/template.html
@@ -38,7 +38,7 @@
                 <h1>Fire Sentry</h1>
                 <span class="auto-type"></span>
                 <div class="primary-button">
-                    <a href="#model">Predict Now</a>
+                    <a href="#model">Learn More</a>
                 </div>
             </div>
         </div>
@@ -66,18 +66,18 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="left-text">
-                        <h4>How its Done</h4>
+                        <h4><b>How its Done</b></h4>
                         <div class="line-dec"></div>
                         <p>Using both Logarithmic and Multi Layer Perceptron regression machine learning models, we were able to predict the
                         occurrence of wildfires across the United States. Find the data used for training and testing <b><a target="_blank" href="https://archive.ics.uci.edu/ml/datasets/forest+fires">here</a>!</b></p>
                         <ul>
-                            <li>-  Approximately 60% accuracy</li>
+                            <li>-  Approximately ~90% accuracy</li>
                             <li>-  Low request latency</li>
                             <li>-  Very low False Negative rate</li>
                             <li>-  Integrated map feature Coming Soon!</li>
                         </ul>
                         <div class="primary-button">
-                            <a href="{% url 'location' %}">Go to predictor</a>
+                            <a href="#predict">Go to predictor</a>
                         </div>
                     </div>
                 </div>
@@ -239,7 +239,10 @@
                                 <a href="img/1st-big-item.jpg" data-lightbox="image-1"><img src="img/1st-item.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>Awesome Note Book</h4>
-                                    <span>$18.00</span>
+                                    <p><span>$18.00</span></p>
+                                    <p><span>$18.00</span></p>
+                                    <p><span>$18.00</span></p>
+                                    <p><span>$18.00</span></p>
                                 </div>
                             </div>
                         </div>
