feat: Added Wildfires

--- a/templates/template.html
+++ b/templates/template.html
@@ -238,11 +238,11 @@
                             <div class="testimonials-item">
                                 <a href="img/1st-big-item.jpg" data-lightbox="image-1"><img src="img/1st-item.jpg" alt=""></a>
                                 <div class="text-content">
-                                    <h4>Awesome Note Book</h4>
-                                    <p><span>$18.00</span></p>
-                                    <p><span>$18.00</span></p>
-                                    <p><span>$18.00</span></p>
-                                    <p><span>$18.00</span></p>
+                                    <h4 style="color: #ff7d27">Solar Park Fire, Texas</h4>
+                                    <br>
+                                    <p><span style="color: black"><b>Damage Area:</b> 2,816 acres</span></p>
+                                    <p><span style="color: black"><b>Total Damages:</b> Still Unknown</span></p>
+                                    <p><span style="color: darkred"><b>Status:</b> Active</span></p>
                                 </div>
                             </div>
                         </div>
@@ -250,8 +250,11 @@
                             <div class="testimonials-item">
                                 <a href="img/2nd-big-item.jpg" data-lightbox="image-1"><img src="img/2nd-item.jpg" alt=""></a>
                                 <div class="text-content">
-                                    <h4>Antique Decoration Photo</h4>
-                                    <span>$27.00</span>
+                                    <h4 style="color: #ff7d27">Dixie Fire, California</h4>
+                                    <br>
+                                    <p><span style="color: black"><b>Damage Area:</b> 463,000 acres</span></p>
+                                    <p><span style="color: black"><b>Total Damages:</b> $637 million</span></p>
+                                    <p><span style="color: green"><b>Status:</b> Out</span></p>
                                 </div>
                             </div>
                         </div>
@@ -259,8 +262,11 @@
                             <div class="testimonials-item">
                                 <a href="img/3rd-big-item.jpg" data-lightbox="image-1"><img src="img/3rd-item.jpg" alt=""></a>
                                 <div class="text-content">
-                                    <h4>Work Hand Bag</h4>
-                                    <span>$36.00</span>
+                                    <h4 style="color: #ff7d27">Squirrel Tree Fire, Arkansas</h4>
+                                    <br>
+                                    <p><span style="color: black"><b>Damage Area:</b> 700 acres</span></p>
+                                    <p><span style="color: black"><b>Total Damages:</b> Still Unknown</span></p>
+                                    <p><span style="color: darkgoldenrod"><b>Status:</b> Contained</span></p>
                                 </div>
                             </div>
                         </div>
@@ -268,8 +274,11 @@
                             <div class="testimonials-item">
                                 <a href="img/4th-big-item.jpg" data-lightbox="image-1"><img src="img/4th-item.jpg" alt=""></a>
                                 <div class="text-content">
-                                    <h4>Smart Watch</h4>
-                                    <span>$45.00</span>
+                                    <h4 style="color: #ff7d27">Storm Fire, Oklahoma</h4>
+                                    <br>
+                                    <p><span style="color: black"><b>Damage Area:</b> 519 acres</span></p>
+                                    <p><span style="color: black"><b>Total Damages:</b> Still Unknown</span></p>
+                                    <p><span style="color: darkred"><b>Status:</b> Active</span></p>
                                 </div>
                             </div>
                         </div>
@@ -277,8 +286,11 @@
                             <div class="testimonials-item">
                                 <a href="img/5th-big-item.jpg" data-lightbox="image-1"><img src="img/5th-item.jpg" alt=""></a>
                                 <div class="text-content">
-                                    <h4>PC Tablet Draw</h4>
-                                    <span>$63.00</span>
+                                    <h4 style="color: #ff7d27">Mosquito Fire, California</h4>
+                                    <br>
+                                    <p><span style="color: black"><b>Damage Area:</b> 76,788 acres</span></p>
+                                    <p><span style="color: black"><b>Total Damages:</b> $100 million</span></p>
+                                    <p><span style="color: green"><b>Status:</b> Out</span></p>
                                 </div>
                             </div>
                         </div>
@@ -286,8 +298,11 @@
                             <div class="testimonials-item">
                                 <a href="img/6th-big-item.jpg" data-lightbox="image-1"><img src="img/6th-item.jpg" alt=""></a>
                                 <div class="text-content">
-                                    <h4>Healthy Milkshake</h4>
-                                    <span>$77.00</span>
+                                    <h4 style="color: #ff7d27">Fort Lyon Fire, Colorado</h4>
+                                    <br>
+                                    <p><span style="color: black"><b>Damage Area:</b> 2,926 acres</span></p>
+                                    <p><span style="color: black"><b>Total Damages:</b> Unknown </span></p> 
+                                    <p><span style="color: green"><b>Status:</b> Out</span></p>
                                 </div>
                             </div>
                         </div>
@@ -295,8 +310,11 @@
                             <div class="testimonials-item">
                                 <a href="img/2nd-big-item.jpg" data-lightbox="image-1"><img src="img/2nd-item.jpg" alt=""></a>
                                 <div class="text-content">
-                                    <h4>Antique Decoration Photo</h4>
-                                    <span>$84.50</span>
+                                    <h4 style="color: #ff7d27">Thorn Springs Fire, Idaho</h4>
+                                    <br>
+                                    <p><span style="color: black"><b>Damage Area:</b> 0.1 acres</span></p>
+                                    <p><span style="color: black"><b>Total Damages:</b> Still Unknown </span></p>
+                                    <p><span style="color: darkred"><b>Status:</b> Active</span></p>
                                 </div>
                             </div>
                         </div>
@@ -304,8 +322,11 @@
                             <div class="testimonials-item">
                                 <a href="img/1st-big-item.jpg" data-lightbox="image-1"><img src="img/1st-item.jpg" alt=""></a>
                                 <div class="text-content">
-                                    <h4>Awesome Notes Book</h4>
-                                    <span>$96.75</span>
+                                    <h4 style="color: #ff7d27">Peshtigo Fire, Wisconsin</h4>
+                                    <br>
+                                    <p><span style="color: black"><b>Damage Area:</b> 1,291,299 acres</span></p>
+                                    <p><span style="color: black"><b>Total Damages:</b> $169 million </span></p>
+                                    <p><span style="color: green"><b>Status:</b> Out</span></p>
                                 </div>
                             </div>
                         </div>
